# autorotator

./: .gitignore  CMakeLists.txt  README.md  autorotator.cpp  stm23ip.cpp  stm23ip.hpp
parts/: 1010_4_CL.sldprt  1010_98_CL.sldprt  1030_36_CL.sldprt  1277N16_Corrosion-Resistant Timing Belt Pulley.SLDPRT  1277N26_Corrosion-Resistant Timing Belt Pulley.SLDPRT  1870K4_Easy-Access Flange-Mounted Shaft Support.SLDPRT  2129.sldprt  2188.sldprt  4081.sldprt  4250.sldprt  6362K221_Water-Resistant Dry-Running Rulon LR Sleeve Bearing.SLDPRT  7532K58_Water-Resistant Dry-Running Thrust Bearing.SLDPRT  8632T153_D-Profile Rotary Shaft.SLDPRT  9421T9_Clamping Shaft Collar.SLDPRT  flatstock.SLDPRT  steel-l-bracket-for-nema-23-stepper-motors.step
